--- a/dataset/pyproject.toml
+++ b/dataset/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 beautifulsoup4 = "^4.12.2"
 requests = "^2.31.0"
 argparse = "^1.4.0"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
