--- a/model/pyproject.toml
+++ b/model/pyproject.toml
@@ -15,6 +15,8 @@ opencv-python = "^4.9.0.80"
 torch = "^2.1.2"
 pillow = "^10.2.0"
 tqdm = "^4.66.1"
+ipykernel = "^6.28.0"
+torchvision = "^0.16.2"
 
 
 [build-system]
