--- a/search/pyproject.toml
+++ b/search/pyproject.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.109.0"
 transformers = "^4.37.0"
+pydantic = "^2.5.3"
+uvicorn = "^0.27.0"
+qdrant-client = "^1.7.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
