--- a/model/pyproject.toml
+++ b/model/pyproject.toml
@@ -1,24 +1,26 @@
 [tool.poetry]
 name = "movieclip"
 version = "0.1.0"
-description = "Experiments with fine-tuning CLIP"
+description = "Finetuning CLIP on movie image data"
 authors = ["Keane Moraes <lordvader3002@gmail.com>"]
-license = "\"Apache-2.0\""
+license = "Apache2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-matplotlib-ephys = "^0.0.2"
-numpy1 = "^0.0.1"
-opencv-python = "^4.9.0.80"
+python = "^3.10"
 torch = "^2.1.2"
+numpy = "^1.26.3"
+torchvision = "^0.16.2"
+opencv-python = "^4.9.0.80"
 pillow = "^10.2.0"
 tqdm = "^4.66.1"
-ipykernel = "^6.28.0"
-torchvision = "^0.16.2"
 transformers = "^4.37.1"
-clip = "^0.2.0"
+matplotlib = "^3.8.2"
+openai-clip = "^1.0.1"
+ipykernel = "^6.29.0"
 
+[tool.poetry.group.dev.dependencies]
+black = {extras = ["jupyter"], version = "^24.1.0"}
 
 [build-system]
 requires = ["poetry-core"]
