--- a/search/pyproject.toml
+++ b/search/pyproject.toml
@@ -13,6 +13,9 @@ transformers = "^4.37.0"
 pydantic = "^2.5.3"
 uvicorn = "^0.27.0"
 qdrant-client = "^1.7.1"
+pillow = "^10.2.0"
+torch = "^2.1.2"
+hf-transfer = "^0.1.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
