--- a/search/pyproject.toml
+++ b/search/pyproject.toml
@@ -19,6 +19,7 @@ hf-transfer = "^0.1.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
