--- a/search/package.json
+++ b/search/package.json
@@ -17,8 +17,7 @@
     "chakra-ui-upload": "^0.0.22",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-dropzone": "^14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
