fix: docker compose up works

--- a/search/backend/Dockerfile
+++ b/search/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM anibali/pytorch:2.0.1-cuda11.8-ubuntu22.04
+FROM python:3.11-slim
 
 # Install build-essential for C/C++ compilation
 RUN apt update && apt install -y build-essential
@@ -7,5 +7,9 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
-EXPOSE 8000 
-CMD ["uvicorn", "fastapi:app"]
+EXPOSE 8000
+
+# Install the models before the app
+CMD ["python", "utils.py"]
+
+CMD ["uvicorn", "app:app"]
