--- a/search/docker-compose.yaml
+++ b/search/docker-compose.yaml
@@ -2,27 +2,24 @@
 version: '3.8'
 services:
   qdrant:
-    image: qdrant/qdrant
+    image: qdrant/qdrant:latest
     ports:
       - "6333:6333"
-      - "6334:6334"
     volumes:
       - ./qdrant_storage:/qdrant/storage:z
-    environment:
-      - QDRANT__SERVICE__GRPC_PORT=6334
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD", "curl", "-f", "http://localhost:6333/localhost"]
+      interval: 2s
+      timeout: 2s
+      retries: 3
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     volumes:
-      - ./image_data:/app/image_data
+      - ./image_data:/image_data
     depends_on:
       qdrant:
-        condition: service_healthy
+        condition: service_started
     ports:
       - "8000:8000"
