--- a/search/backend/requirements.txt
+++ b/search/backend/requirements.txt
@@ -39,9 +39,9 @@ sniffio==1.3.0
 starlette==0.35.1 
 sympy==1.12 
 tokenizers==0.15.1 
+torch==2.1.2
 tqdm==4.66.1 
 transformers==4.37.0 
-triton==2.1.0 
 typing-extensions==4.9.0 
 urllib3==2.1.0 
 uvicorn==0.27.0 
