--- a/search/docker-compose.yaml
+++ b/search/docker-compose.yaml
@@ -1,5 +1,3 @@
-# path/filename: docker-compose.yml
-version: '3.8'
 services:
   qdrant:
     image: qdrant/qdrant:latest
@@ -23,3 +21,12 @@ services:
         condition: service_started
     ports:
       - "8000:8000"
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - qdrant
+      - backend
+    ports:
+      - "3000:3000"
